rtest/tests/jsr335/Semantics/LambdaTypeAnalysis/AssignmentContext/ShouldFail/syntax05/Test.java
// .result=COMPILE_FAIL

public class Test {
	public interface TestInterface {
		 public int m();
	}
	
	public static void main(String[] args) {
		TestInterface t = args.length==4 ? () -> 4 : () -> {}; 
    }
}
